NEWS/ChangeLog for hydroGOF
--------------------------

0.3-5	(under-development)
        o 'KGE'   : -) now it returns NA instead of an error when there are no pairs of 'sim' and 'obs' without missing values 
                       (thanks to Giovanni Forzieri !)
        
0.3-4	03-Jul-2012
        o new function 'VE', which computes the volumetric efficiency proposed by Criss and Winston 2008
         (thanks to Eric Morway for giving the final push to include it !)
        o 'gof'   : VE is now included in the computed goodness-of-fit measures
        o 'ggof'  : VE is now included in the computed goodness-of-fit measures
        o 'plot2' : VE is now included in the computed goodness-of-fit measures (when 'leg.gof=TRUE')
        o function '.intersect' was removed and function 'valindex' was improved in order to replace it
        o 'zoo' package was moved from 'Imports' to 'Depends'
        o 'methods' package is now imported, in order to avoid problems with Rscript, which currently does not load 'methods'
        
0.3-3	02-May-2012
        o 'gof'   : added new example and description of the output class (thanks to Kris Jaeger !)
	o 'br2'   : the new example included in version 0.3-2 was improved
        o 'ggof'  : fixed problem with 'ylim' when some elements in 'sim' or 'obs' were NA (the issue was in the 'plot2' function)
	o 'plot2' : fixed problem with 'ylim' when some elements in 'x' or 'y' were NA
	            
0.3-2	07-Oct-2011
	o 'br2'   : fixed documentation error in its formula (thanks to Jan Corluy !), and a new example was added.
	            Its value was already computed in the correct way.
	
0.3-1	14-Sep-2011
	o 'ggof'  : fixed problem when 'ylim' is specified by the user (the issue was in the 'plot2' function)
	o 'plot2' : fixed problem when 'ylim' is specified by the user

0.3-0	01-Sep-2011

	o NAMESPACE created, which leads to reduced dependency on the package hydroTSM.